tooling/nargo_cli/tests/snapshots/execution_failure/invalid_comptime_bytes_decomposition/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Field failed to decompose into specified 1 limbs
    ┌─ std/field/mod.nr:175:9
    │
175 │         __to_be_radix(self, radix)
    │         --------------------------
    │
    = Call stack:
      1. src/main.nr:3:5
      2. std/field/mod.nr:138:21
      3. std/field/mod.nr:175:9

Failed assertion
