tooling/nargo_cli/tests/snapshots/execution_failure/invalid_comptime_bytes_decomposition/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Field failed to decompose into specified 1 limbs
    ┌─ std/field/mod.nr:175:9
    │
175 │         __to_be_radix(self, radix)
    │         -------------------------- Assertion failed
    │
    = Call stack:
      1. src/main.nr:1:4
      2. src/main.nr:3:5
      3. std/field/mod.nr:138:21
      4. std/field/mod.nr:175:9

Error interpreting main function
