tooling/nargo_cli/tests/snapshots/execution_failure/invalid_comptime_bytes_decomposition/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Failed constraint
    ┌─ std/field/mod.nr:207:9
    │
207 │         self.__to_be_radix(radix)
    │         ------------------
    │
    = Call stack:
      1. src/main.nr:3:5
      2. std/field/mod.nr:169:21
      3. std/field/mod.nr:207:9

Failed to solve program: 'Cannot satisfy constraint'
